--- a/overview.html
+++ b/overview.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=1130px, initial-scale=1.0">
 	<meta name="author" content="electrum-rvn.org">
-	<link rel="stylesheet" href="css/style.min.css?_v=20241020163947">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241020164851">
 	<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 	<link rel="icon" type="image/webp" sizes="16x16" href="img/favicon/16x16.webp">
 	<link rel="icon" type="image/webp" sizes="32x32" href="img/favicon/32x32.webp">
@@ -99,15 +99,15 @@
 				</a>
 				<div class="footer__links">
 					<a href="disclaimer.html" class="footer__link">Disclaimer</a>
-					<a href="install.html" target="_blank" class="footer__link">Install Guide</a>
-					<a href="mit-license.html" target="_blank" class="footer__link">MIT Licence</a>
+					<a href="guide.html" class="footer__link">Install Guide</a>
+					<a href="mit-license.html" class="footer__link">MIT Licence</a>
 					<a href="" target="_blank" class="footer__link">Website source</a>
 				</div>
 				<div class="footer__copy">© Copyright Electrum Raven</div>
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241020163947"></script>
+	<script src="js/app.min.js?_v=20241020164851"></script>
 </body>
 
 </html>
