--- a/home.html
+++ b/home.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-	<title>Electrum Raven Wallet - Secure, Accessible, and Feature-Rich</title>
+	<title>Electrum RVN - Secure & Accessible Raven Wallet for Efficient Transactions</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=1130px, initial-scale=1.0">
 	<meta name="author" content="electrum-rvn.org">
-	<link rel="stylesheet" href="css/style.min.css?_v=20241020164851">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241022145458">
 	<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 	<link rel="icon" type="image/webp" sizes="16x16" href="img/favicon/16x16.webp">
 	<link rel="icon" type="image/webp" sizes="32x32" href="img/favicon/32x32.webp">
@@ -17,20 +17,20 @@
 	<link rel="icon" type="image/webp" sizes="400x400" href="img/favicon/400x400.webp">
 	<link rel="canonical" href="https://electrum-rvn.org">
 	<meta name="robots" content="follow, index, max-snippet:-1, max-image-preview:large">
-	<meta name="description" content="Electrum Raven Wallet offers a secure and accessible solution for managing your Raven. Explore our features designed for seamless, secure cryptocurrency transactions.">
-	<meta name="keywords" content="Electrum Raven wallet, secure Raven wallet, Raven wallet features, accessible Raven wallet, Electrum RVN wallet, cryptocurrency wallet">
+	<meta name="description" content="Electrum Raven is a fast, lightweight wallet for managing Raven (RVN) cryptocurrency. Enjoy secure transactions with a user-friendly design and advanced privacy features, perfect for Raven users.">
+	<meta name="keywords" content="Electrum RVN, Raven wallet, secure RVN wallet, fast Raven transactions, RVN cryptocurrency, lightweight Raven wallet, crypto wallet">
 	<meta property="og:site_name" content="Electrum-rvn.org">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://electrum-rvn.org">
-	<meta property="og:title" content="Electrum Raven Wallet - Secure, Accessible, and Feature-Rich">
-	<meta property="og:description" content="Electrum Raven Wallet offers a secure and accessible solution for managing your Raven. Explore our features designed for seamless, secure cryptocurrency transactions.">
+	<meta property="og:title" content="Electrum RVN - Secure & Accessible Raven Wallet for Efficient Transactions">
+	<meta property="og:description" content="Electrum Raven is a fast, lightweight wallet for managing Raven (RVN) cryptocurrency. Enjoy secure transactions with a user-friendly design and advanced privacy features, perfect for Raven users.">
 	<meta property="og:image" content="img/favicon/400x400.webp">
 	<meta property="og:image:width" content="400">
 	<meta property="og:image:height" content="400">
 	<meta property="og:image:alt" content="Electrum Raven logo">
 	<meta property="og:image:type" content="image/webp">
-	<meta property="twitter:title" content="Electrum Raven Wallet - Secure, Accessible, and Feature-Rich">
-	<meta property="twitter:description" content="Electrum Raven Wallet offers a secure and accessible solution for managing your Raven. Explore our features designed for seamless, secure cryptocurrency transactions.">
+	<meta property="twitter:title" content="Electrum RVN - Secure & Accessible Raven Wallet for Efficient Transactions">
+	<meta property="twitter:description" content="Electrum Raven is a fast, lightweight wallet for managing Raven (RVN) cryptocurrency. Enjoy secure transactions with a user-friendly design and advanced privacy features, perfect for Raven users.">
 	<meta property="twitter:image" content="img/favicon/400x400.webp">
 	<meta property="twitter:card" content="summary">
 </head>
@@ -66,18 +66,15 @@
 								<p>
 									<span itemprop="author" itemscope itemtype="https://schema.org/Organization">
 										<a style="display: inline;" href="https://electrum-rvn.org" itemprop="url">
-											<span itemprop="name">Electrum Raven Wallet</span>
+											<span itemprop="name">Raven Wallet</span>
 										</a>
 									</span>
-									Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam suscipit necessitatibus, qui enim porro commodi iure iusto alias dignissimos quibusdam unde quidem harum nisi, perspiciatis maxime cum voluptas eius inventore.
-								</p>
-								<p>
-									Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+									is a secure and user-friendly wallet designed specifically for the Ravencoin network. It allows users to send, receive, and store Ravencoin (RVN) and tokens seamlessly. Built with advanced encryption technologies, it ensures your digital assets are safe, whether you're an experienced user or just getting started. Download the wallet today and join the growing Ravencoin community.
 								</p>
 							</div>
 						</div>
-						<div>
-							<a href="overview.html" class="about-home__button button" itemprop="url">Learn more</a>
+						<div class="about-home__button">
+							<a href="overview.html" class="button" itemprop="url">Learn more</a>
 						</div>
 					</div>
 					<div class="about-home__image">
@@ -88,21 +85,16 @@
 			<article class="community-home" itemscope itemtype="https://schema.org/Article">
 				<div class="community-home__container">
 					<div class="community-home__image">
-						<img src="img/community/image.webp" alt="Electrum RVN Image" itemprop="image">
+						<img src="img/community/image.webp" alt="Community RVN Image" itemprop="image">
 					</div>
 					<div class="community-home__content">
 						<h2 class="community-home__title title" itemprop="headline">
 							Join the <span>Community</span>
 						</h2>
-						<div class="community-home__text-wr">
-							<div class="community-home__text text" itemprop="description">
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda error reprehenderit architecto ducimus vel facilis at expedita totam quo! Cupiditate sit, nisi animi ea at dicta soluta enim cum facilis.
-								</p>
-								<p>
-									Assumenda error reprehenderit architecto ducimus vel facilis at expedita totam quo! Cupiditate sit, nisi animi ea at dicta soluta enim cum facilis.
-								</p>
-							</div>
+						<div class="community-home__text text" itemprop="description">
+							<p>
+								Our vibrant Ravencoin community is full of innovators and enthusiasts who are excited about the future of decentralized technology. By using the Raven Wallet, you’re not just securing your assets; you’re becoming a part of something bigger. Stay connected with our forums, follow us on social media, and join the conversation. Let’s build the future together!
+							</p>
 						</div>
 						<div class="community-home__socials">
 							<a href="#" class="community-home__link" itemprop="url">
@@ -130,44 +122,44 @@
 					<div class="advantages__items">
 						<article class="advantages__item item-advantages" itemscope itemtype="https://schema.org/Article">
 							<img src="img/advantages/01.svg" class="item-advantages__icon" alt="advantage icon" itemprop="image">
-							<h4 class="item-advantages__title" itemprop="name">Lorem, ipsum.</h4>
+							<h4 class="item-advantages__title" itemprop="headline">Security First</h4>
 							<div class="item-advantages__text text" itemprop="description">
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur unde ipsum et odit perspiciatis! Tempora consectetur</p>
+								<p>Raven Wallet is built with top-level security to keep your assets safe from unauthorized access.</p>
 							</div>
 						</article>
 						<article class="advantages__item item-advantages" itemscope itemtype="https://schema.org/Article">
 							<img src="img/advantages/01.svg" class="item-advantages__icon" alt="advantage icon" itemprop="image">
-							<h4 class="item-advantages__title" itemprop="name">Lorem, ipsum.</h4>
+							<h4 class="item-advantages__title" itemprop="headline">User-Friendly Interface</h4>
 							<div class="item-advantages__text text" itemprop="description">
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur unde ipsum et odit perspiciatis! Tempora consectetur</p>
+								<p>Whether you're new to crypto or a seasoned user, our intuitive interface makes it easy for anyone to manage their assets.</p>
 							</div>
 						</article>
 						<article class="advantages__item item-advantages" itemscope itemtype="https://schema.org/Article">
 							<img src="img/advantages/01.svg" class="item-advantages__icon" alt="advantage icon" itemprop="image">
-							<h4 class="item-advantages__title" itemprop="name">Lorem, ipsum.</h4>
+							<h4 class="item-advantages__title" itemprop="headline">Fast Transactions</h4>
 							<div class="item-advantages__text text" itemprop="description">
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur unde ipsum et odit perspiciatis! Tempora consectetur</p>
+								<p>Enjoy lightning-fast transactions across the Ravencoin network without unnecessary delays.</p>
 							</div>
 						</article>
 						<article class="advantages__item item-advantages" itemscope itemtype="https://schema.org/Article">
 							<img src="img/advantages/01.svg" class="item-advantages__icon" alt="advantage icon" itemprop="image">
-							<h4 class="item-advantages__title" itemprop="name">Lorem, ipsum.</h4>
+							<h4 class="item-advantages__title" itemprop="headline">Cross-Platform Support</h4>
 							<div class="item-advantages__text text" itemprop="description">
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur unde ipsum et odit perspiciatis! Tempora consectetur</p>
+								<p>Access your Raven Wallet on desktop, mobile, or tablet – anytime, anywhere.</p>
 							</div>
 						</article>
 						<article class="advantages__item item-advantages" itemscope itemtype="https://schema.org/Article">
 							<img src="img/advantages/01.svg" class="item-advantages__icon" alt="advantage icon" itemprop="image">
-							<h4 class="item-advantages__title" itemprop="name">Lorem, ipsum.</h4>
+							<h4 class="item-advantages__title" itemprop="headline">Open Source</h4>
 							<div class="item-advantages__text text" itemprop="description">
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur unde ipsum et odit perspiciatis! Tempora consectetur</p>
+								<p>Raven Wallet is completely open source, meaning anyone can contribute or verify the security of the code.</p>
 							</div>
 						</article>
 						<article class="advantages__item item-advantages" itemscope itemtype="https://schema.org/Article">
 							<img src="img/advantages/01.svg" class="item-advantages__icon" alt="advantage icon" itemprop="image">
-							<h4 class="item-advantages__title" itemprop="name">Lorem, ipsum.</h4>
+							<h4 class="item-advantages__title" itemprop="headline">Dedicated Support</h4>
 							<div class="item-advantages__text text" itemprop="description">
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur unde ipsum et odit perspiciatis! Tempora consectetur</p>
+								<p>Our team is here to help. With 24/7 support, we ensure any issues are quickly resolved.</p>
 							</div>
 						</article>
 					</div>
@@ -177,9 +169,9 @@
 				<div class="cta__container">
 					<div class="cta__body">
 						<h3 class="cta__title title title--smaller">Get Wallet Today!</h3>
-						<cta class="cta__text text">
-							<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque possimus officia dolor dolorem quam deleniti porro nemo dolores placeat totam harum, quisquam nam esse recusandae voluptatem.</p>
-						</cta>
+						<div class="cta__text text">
+							<p>Download Raven Wallet today and take control of your Ravencoin. Fast, secure, and user-friendly, it's the perfect solution for storing and managing your assets.</p>
+						</div>
 					</div>
 					<div class="cta__button">
 						<a href="install.html" class="button">Go to Install</a>
@@ -190,7 +182,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<a href="home.html" class="footer__logo">
-					<img src="img/raven-icon.webp" alt="Logo">
+					<img src="img/raven-icon.webp" alt="Raven icon">
 				</a>
 				<div class="footer__links">
 					<a href="disclaimer.html" class="footer__link">Disclaimer</a>
@@ -202,7 +194,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241020164851"></script>
+	<script src="js/app.min.js?_v=20241022145458"></script>
 </body>
 
 </html>
