--- a/install.html
+++ b/install.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-	<title>Download Electrum Raven Wallet - Secure & Easy Installation</title>
+	<title>Download and Install Raven Wallet - Get Started with Electrum RVN</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=1130px, initial-scale=1.0">
 	<meta name="author" content="electrum-rvn.org">
-	<link rel="stylesheet" href="css/style.min.css?_v=20241020164851">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241022145458">
 	<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 	<link rel="icon" type="image/webp" sizes="16x16" href="img/favicon/16x16.webp">
 	<link rel="icon" type="image/webp" sizes="32x32" href="img/favicon/32x32.webp">
@@ -18,18 +18,18 @@
 	<link rel="canonical" href="https://electrum-rvn.org/install.html">
 	<meta name="robots" content="follow, index, max-snippet:-1, max-image-preview:large">
 	<meta name="description" content="Download Electrum Raven Wallet for secure and fast access to your Raven. Choose the version for your device from our easy-to-use installation guide.">
-	<meta name="keywords" content="Download Electrum Raven wallet, Raven wallet installation, Electrum RVN download, secure Raven wallet, install Electrum Raven">
+	<meta name="keywords" content="Download Electrum RVN, install Raven wallet, secure RVN wallet, Raven wallet download, Electrum RVN setup">
 	<meta property="og:site_name" content="Electrum-rvn.org">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://electrum-rvn.org/install.html">
-	<meta property="og:title" content="Download Electrum Raven Wallet - Secure & Easy Installation">
+	<meta property="og:title" content="Download and Install Raven Wallet - Get Started with Electrum RVN">
 	<meta property="og:description" content="Download Electrum Raven Wallet for secure and fast access to your Raven. Choose the version for your device from our easy-to-use installation guide.">
 	<meta property="og:image" content="img/favicon/400x400.webp">
 	<meta property="og:image:width" content="400">
 	<meta property="og:image:height" content="400">
 	<meta property="og:image:alt" content="Electrum Raven logo">
 	<meta property="og:image:type" content="image/webp">
-	<meta property="twitter:title" content="Download Electrum Raven Wallet - Secure & Easy Installation">
+	<meta property="twitter:title" content="Download and Install Raven Wallet - Get Started with Electrum RVN">
 	<meta property="twitter:description" content="Download Electrum Raven Wallet for secure and fast access to your Raven. Choose the version for your device from our easy-to-use installation guide.">
 	<meta property="twitter:image" content="img/favicon/400x400.webp">
 	<meta property="twitter:card" content="summary">
@@ -59,7 +59,7 @@
 				<div class="release__container">
 					<h1 class="release__title title" itemprop="headline">Get Started with Electrum Raven</h1>
 					<div class="release__text text" itemprop="description">
-						<p>Download our wallet today and take the first step towards secure and private cryptocurrency management. Become part of a community that values privacy and financial freedom.</p>
+						<p>Download our wallet today and take the first step toward secure and private cryptocurrency management. Become part of a community that values privacy and financial freedom. With Electrum Raven, managing your Ravencoin (RVN) and tokens is easy and safe. Select your operating system below to begin the installation process.</p>
 					</div>
 				</div>
 			</article>
@@ -71,7 +71,7 @@
 							<tr>
 								<th>
 									<div class="install__label">
-										<img src="img/icons/window.svg" alt="Windows icon">Windows
+										<img src="img/icons/windows.svg" alt="Windows icon">Windows
 										<span style="font-size:75%">(15.29 and higher)</span>
 									</div>
 								</th>
@@ -119,7 +119,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<a href="home.html" class="footer__logo">
-					<img src="img/raven-icon.webp" alt="Logo">
+					<img src="img/raven-icon.webp" alt="Raven icon">
 				</a>
 				<div class="footer__links">
 					<a href="disclaimer.html" class="footer__link">Disclaimer</a>
@@ -131,7 +131,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241020164851"></script>
+	<script src="js/app.min.js?_v=20241022145458"></script>
 </body>
 
 </html>
