--- a/mit-license.html
+++ b/mit-license.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-	<title>MIT License - Electrum Raven</title>
+	<title>MIT License - Electrum Raven Open-Source Wallet</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=1130px, initial-scale=1.0">
 	<meta name="author" content="electrum-rvn.org">
-	<link rel="stylesheet" href="css/style.min.css?_v=20241020164851">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241022145458">
 	<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 	<link rel="icon" type="image/webp" sizes="16x16" href="img/favicon/16x16.webp">
 	<link rel="icon" type="image/webp" sizes="32x32" href="img/favicon/32x32.webp">
@@ -17,20 +17,20 @@
 	<link rel="icon" type="image/webp" sizes="400x400" href="img/favicon/400x400.webp">
 	<link rel="canonical" href="https://electrum-rvn.org/mit-license.html">
 	<meta name="robots" content="follow, index, max-snippet:-1, max-image-preview:large">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Electrum RVN is distributed under the MIT License, offering transparency and open-source access for Raven wallet users. Review the license terms for this secure cryptocurrency wallet.">
+	<meta name="keywords" content="Electrum RVN MIT License, open-source Raven wallet, MIT License Raven cryptocurrency, Raven wallet license">
 	<meta property="og:site_name" content="Electrum-rvn.org">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://electrum-rvn.org/mit-license.html">
-	<meta property="og:title" content="MIT License - Electrum Raven">
-	<meta property="og:description" content="">
+	<meta property="og:title" content="MIT License - Electrum Raven Open-Source Wallet">
+	<meta property="og:description" content="Electrum RVN is distributed under the MIT License, offering transparency and open-source access for Raven wallet users. Review the license terms for this secure cryptocurrency wallet.">
 	<meta property="og:image" content="img/favicon/400x400.webp">
 	<meta property="og:image:width" content="400">
 	<meta property="og:image:height" content="400">
 	<meta property="og:image:alt" content="Electrum Raven logo">
 	<meta property="og:image:type" content="image/webp">
-	<meta property="twitter:title" content="MIT License - Electrum Raven">
-	<meta property="twitter:description" content="">
+	<meta property="twitter:title" content="MIT License - Electrum Raven Open-Source Wallet">
+	<meta property="twitter:description" content="Electrum RVN is distributed under the MIT License, offering transparency and open-source access for Raven wallet users. Review the license terms for this secure cryptocurrency wallet.">
 	<meta property="twitter:image" content="img/favicon/400x400.webp">
 	<meta property="twitter:card" content="summary">
 </head>
@@ -60,28 +60,9 @@
 					<article class="license__article" itemscope itemtype="https://schema.org/Article">
 						<h1 class="license__title title" itemprop="headline">The MIT License (MIT)</h1>
 						<div class="license__text" itemprop="description">
-							<p>
-								Permission is hereby granted, free of charge, to any person obtaining
-								a copy of this software and associated documentation files (the
-								"Software"), to deal in the Software without restriction, including
-								without limitation the rights to use, copy, modify, merge, publish,
-								distribute, sublicense, and/or sell copies of the Software, and to
-								permit persons to whom the Software is furnished to do so, subject to
-								the following conditions:
-							</p>
-							<p>
-								The above copyright notice and this permission notice shall be
-								included in all copies or substantial portions of the Software.
-							</p>
-							<p>
-								THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-								EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-								MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-								NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
-								LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
-								OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
-								WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-							</p>
+							<p> Permission is hereby granted, free of charge, to any person obtaining a copy of the Electrum Raven Wallet software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
+							<p> The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
+							<p> THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 						</div>
 					</article>
 				</div>
@@ -90,7 +71,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<a href="home.html" class="footer__logo">
-					<img src="img/raven-icon.webp" alt="Logo">
+					<img src="img/raven-icon.webp" alt="Raven icon">
 				</a>
 				<div class="footer__links">
 					<a href="disclaimer.html" class="footer__link">Disclaimer</a>
@@ -102,7 +83,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241020164851"></script>
+	<script src="js/app.min.js?_v=20241022145458"></script>
 </body>
 
 </html>
