--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-	<title>Disclaimer - MIT Licensed Open-Source Software | Electrum Raven Wallet</title>
+	<title>Disclaimer - Important Information for Raven Wallet Users</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=1130px, initial-scale=1.0">
 	<meta name="author" content="electrum-rvn.org">
-	<link rel="stylesheet" href="css/style.min.css?_v=20241020164851">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241022145458">
 	<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 	<link rel="icon" type="image/webp" sizes="16x16" href="img/favicon/16x16.webp">
 	<link rel="icon" type="image/webp" sizes="32x32" href="img/favicon/32x32.webp">
@@ -17,20 +17,20 @@
 	<link rel="icon" type="image/webp" sizes="400x400" href="img/favicon/400x400.webp">
 	<link rel="canonical" href="https://electrum-rvn.org/disclaimer.html">
 	<meta name="robots" content="follow, index, max-snippet:-1, max-image-preview:large">
-	<meta name="description" content="Electrum Raven Wallet is open-source software distributed under the MIT License. Review the legal terms and conditions for using this secure Raven wallet.">
-	<meta name="keywords" content="Electrum Raven disclaimer, open-source Raven wallet, MIT License Raven wallet, Electrum RVN terms, Raven wallet legal">
+	<meta name="description" content="Review the Electrum RVN disclaimer for important information regarding the usage, authorship, and legal terms of this Raven wallet. Ensure a secure and compliant experience with Electrum RVN.">
+	<meta name="keywords" content="Electrum RVN disclaimer, Raven wallet legal information, RVN wallet authorship, Raven wallet disclaimer, Electrum RVN legal terms">
 	<meta property="og:site_name" content="Electrum-rvn.org">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://electrum-rvn.org/disclaimer.html">
-	<meta property="og:title" content="Disclaimer - MIT Licensed Open-Source Software | Electrum Raven Wallet">
-	<meta property="og:description" content="Electrum Raven Wallet is open-source software distributed under the MIT License. Review the legal terms and conditions for using this secure Raven wallet.">
+	<meta property="og:title" content="Disclaimer - Important Information for Raven Wallet Users">
+	<meta property="og:description" content="Review the Electrum RVN disclaimer for important information regarding the usage, authorship, and legal terms of this Raven wallet. Ensure a secure and compliant experience with Electrum RVN.">
 	<meta property="og:image" content="img/favicon/400x400.webp">
 	<meta property="og:image:width" content="400">
 	<meta property="og:image:height" content="400">
 	<meta property="og:image:alt" content="Electrum Raven logo">
 	<meta property="og:image:type" content="image/webp">
-	<meta property="twitter:title" content="Disclaimer - MIT Licensed Open-Source Software | Electrum Raven Wallet">
-	<meta property="twitter:description" content="Electrum Raven Wallet is open-source software distributed under the MIT License. Review the legal terms and conditions for using this secure Raven wallet.">
+	<meta property="twitter:title" content="Disclaimer - Important Information for Raven Wallet Users">
+	<meta property="twitter:description" content="Review the Electrum RVN disclaimer for important information regarding the usage, authorship, and legal terms of this Raven wallet. Ensure a secure and compliant experience with Electrum RVN.">
 	<meta property="twitter:image" content="img/favicon/400x400.webp">
 	<meta property="twitter:card" content="summary">
 </head>
@@ -55,26 +55,26 @@
 			</div>
 		</header>
 		<main class="page">
-			<div class="disclaimer">
+			<section class="disclaimer" itemscope itemtype="https://schema.org/Article">
 				<div class="disclaimer__container">
 					<div class="disclaimer__info">
-						<h1 class="disclaimer__title title">DISCLAIMER</h1>
-						<div class="disclaimer__text">
+						<h1 class="disclaimer__title title" itemprop="headline">DISCLAIMER</h1>
+						<div class="disclaimer__text" itemprop="description">
 							<p>
-								Electrum RVN is open-source software, distributed under the <a href="https://github.com/fpour/DGB/blob/main/LICENSE">MIT Licence</a>.
+								Electrum RVN is open-source software, distributed under the <a href="mit-license.html">MIT License</a>. While we strive to provide secure and reliable tools, this software is provided "as is", without any warranties or guarantees of any kind. The developers and contributors are not responsible for any loss of funds, data, or any other damages arising from the use of this software.
 							</p>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, est. Pariatur quia quaerat voluptates perferendis eligendi sunt nesciunt dolorum quam ullam, praesentium nulla aut at, necessitatibus neque molestiae, quis eos.
+								By downloading and using Electrum RVN, you agree to assume all responsibility and liability for your use of the wallet. Please ensure you follow best practices for securing your wallet and private keys.
 							</p>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 				<a href="home.html" class="footer__logo">
-					<img src="img/raven-icon.webp" alt="Logo">
+					<img src="img/raven-icon.webp" alt="Raven icon">
 				</a>
 				<div class="footer__links">
 					<a href="disclaimer.html" class="footer__link">Disclaimer</a>
@@ -86,7 +86,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241020164851"></script>
+	<script src="js/app.min.js?_v=20241022145458"></script>
 </body>
 
 </html>
