--- a/overview.html
+++ b/overview.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-	<title>Overview Electrum Raven Wallet - Trusted Since 2015</title>
+	<title>Overview Electrum Raven Wallet</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=1130px, initial-scale=1.0">
 	<meta name="author" content="electrum-rvn.org">
-	<link rel="stylesheet" href="css/style.min.css?_v=20241020164851">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241022145458">
 	<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 	<link rel="icon" type="image/webp" sizes="16x16" href="img/favicon/16x16.webp">
 	<link rel="icon" type="image/webp" sizes="32x32" href="img/favicon/32x32.webp">
@@ -17,20 +17,20 @@
 	<link rel="icon" type="image/webp" sizes="400x400" href="img/favicon/400x400.webp">
 	<link rel="canonical" href="https://electrum-rvn.org/overview.html">
 	<meta name="robots" content="follow, index, max-snippet:-1, max-image-preview:large">
-	<meta name="description" content="Learn more about Electrum Raven Wallet, the trusted and feature-rich solution for managing Raven. Explore its history, security features, and performance.">
-	<meta name="keywords" content="Overview Electrum Raven wallet, Electrum RVN overview, Raven wallet history, secure Raven wallet, Electrum RVN features, Electrum Raven history">
+	<meta name="description" content="Learn about Electrum RVN, the go-to wallet for managing Raven (RVN) cryptocurrency. Discover its core features and benefits for fast and secure RVN transactions.">
+	<meta name="keywords" content="Electrum RVN overview, Raven wallet features, secure RVN wallet, manage Raven cryptocurrency, lightweight crypto wallet, Raven cryptocurrency wallet">
 	<meta property="og:site_name" content="Electrum-rvn.org">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://electrum-rvn.org/overview.html">
-	<meta property="og:title" content="Overview Electrum Raven Wallet - Trusted Since 2015">
-	<meta property="og:description" content="Learn more about Electrum Raven Wallet, the trusted and feature-rich solution for managing Raven. Explore its history, security features, and performance.">
+	<meta property="og:title" content="Overview Electrum Raven Wallet">
+	<meta property="og:description" content="Learn about Electrum RVN, the go-to wallet for managing Raven (RVN) cryptocurrency. Discover its core features and benefits for fast and secure RVN transactions.">
 	<meta property="og:image" content="img/favicon/400x400.webp">
 	<meta property="og:image:width" content="400">
 	<meta property="og:image:height" content="400">
 	<meta property="og:image:alt" content="Electrum Raven logo">
 	<meta property="og:image:type" content="image/webp">
-	<meta property="twitter:title" content="About Electrum Raven Wallet - Trusted Since 2015">
-	<meta property="twitter:description" content="Learn more about Electrum Raven Wallet, the trusted and feature-rich solution for managing Raven. Explore its history, security features, and performance.">
+	<meta property="twitter:title" content="About Electrum Raven Wallet">
+	<meta property="twitter:description" content="Learn about Electrum RVN, the go-to wallet for managing Raven (RVN) cryptocurrency. Discover its core features and benefits for fast and secure RVN transactions.">
 	<meta property="twitter:image" content="img/favicon/400x400.webp">
 	<meta property="twitter:card" content="summary">
 </head>
@@ -58,18 +58,18 @@
 			<div class="about">
 				<div class="about__container">
 					<article class="about__article" itemscope itemtype="https://schema.org/Article">
-						<h1 class="about__title title" itemprop="headline">ABOUT ELECTRUM RVN</h1>
+						<h1 class="about__title title" itemprop="headline">About Electrum RVN</h1>
 						<div class="about__text" itemprop="description">
 							<p>
-								Lorem ipsum dolor sit, amet consectetur <a href="">adipisicing</a> elit. Omnis iure eveniet ullam reprehenderit, voluptatibus enim odio sint asperiores dolorem nobis voluptatum blanditiis porro quibusdam error. Accusamus expedita soluta placeat molestias?
+								Electrum RVN is a lightweight, secure, and fast wallet for the Ravencoin blockchain. It allows users to easily manage their RVN and tokens while providing enhanced security features and a seamless user experience. Built for both developers and everyday users, Electrum RVN combines advanced functionality with simplicity, making it an essential tool for the Ravencoin community.
 							</p>
 						</div>
 					</article>
 					<article class="about__article" itemscope itemtype="https://schema.org/Article">
-						<h2 class="about__title title--smaller" itemprop="headline">Developers with Github write access</h2>
+						<h2 class="about__title title--smaller" itemprop="headline">Developers with GitHub Write Access</h2>
 						<div class="about__text" itemprop="description">
 							<p>
-								<a href="">Animi tempora</a> modi, ducimus, minus iste officiis, vel laudantium atque eligendi. Saepe recusandae animi libero ipsum eos provident est? ducimus, minus iste officiis, vel laudantium atque eligendi. Saepe recusandae animi libero ipsum eos provident est?
+								Electrum RVN is an open-source project, and we encourage contributions from developers across the globe. With GitHub write access, authorized developers can directly contribute to improving the wallet by submitting updates, patches, and new features. This collaborative approach ensures that Electrum RVN remains up-to-date with the latest security protocols and blockchain developments.
 							</p>
 						</div>
 					</article>
@@ -77,15 +77,15 @@
 						<h2 class="about__title title--smaller" itemprop="headline">Website and Release Security</h2>
 						<div class="about__text" itemprop="description">
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem <a href="">aspernatur maiores</a> animi tempora modi, ducimus, minus iste officiis, vel laudantium atque eligendi. Saepe recusandae animi libero ipsum eos provident est? ducimus, minus iste officiis, vel laudantium atque eligendi. Saepe recusandae animi libero ipsum eos provident est?
+								At Electrum RVN, we prioritize the security of our users. All official releases are signed and verified to ensure their authenticity. Our website is regularly audited, and we take measures to protect against vulnerabilities and unauthorized access. By adhering to rigorous security standards, we ensure that users can trust both the wallet and the platform they download it from.
 							</p>
 						</div>
 					</article>
 					<article class="about__article" itemscope itemtype="https://schema.org/Article">
-						<h2 class="about__title title--smaller" itemprop="headline">Lorem ipsum dolor sit amet</h2>
+						<h2 class="about__title title--smaller" itemprop="headline">Community Driven Development</h2>
 						<div class="about__text" itemprop="description">
 							<p>
-								Lorem ipsum dolor sit amet <a href="">consectetur</a> adipisicing elit. Autem aspernatur maiores animi tempora modi, ducimus, minus iste officiis, vel laudantium atque eligendi. Saepe recusandae animi libero ipsum eos provident est? ducimus, minus iste officiis, vel laudantium atque eligendi. Saepe recusandae animi libero ipsum eos provident est?
+								Electrum RVN thrives on the contributions of its active and passionate community. With a transparent development process and open channels for feedback, we continuously improve the wallet to meet the needs of our users. Join us in shaping the future of Electrum RVN by participating in discussions, suggesting features, or contributing to the code.
 							</p>
 						</div>
 					</article>
@@ -95,7 +95,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<a href="home.html" class="footer__logo">
-					<img src="img/raven-icon.webp" alt="Logo">
+					<img src="img/raven-icon.webp" alt="Raven icon">
 				</a>
 				<div class="footer__links">
 					<a href="disclaimer.html" class="footer__link">Disclaimer</a>
@@ -107,7 +107,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241020164851"></script>
+	<script src="js/app.min.js?_v=20241022145458"></script>
 </body>
 
 </html>
