--- a/overview.html
+++ b/overview.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=1130px, initial-scale=1.0">
 	<meta name="author" content="electrum-rvn.org">
-	<link rel="stylesheet" href="css/style.min.css?_v=20241022150720">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241024165159">
 	<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 	<link rel="icon" type="image/webp" sizes="16x16" href="img/favicon/16x16.webp">
 	<link rel="icon" type="image/webp" sizes="32x32" href="img/favicon/32x32.webp">
@@ -91,6 +91,19 @@
 					</article>
 				</div>
 			</div>
+			<section class="cta">
+				<div class="cta__container">
+					<div class="cta__body">
+						<h3 class="cta__title title title--smaller">Get Wallet Today!</h3>
+						<div class="cta__text text">
+							<p>Download Raven Wallet today and take control of your Ravencoin. Fast, secure, and user-friendly, it's the perfect solution for storing and managing your assets.</p>
+						</div>
+					</div>
+					<div class="cta__button">
+						<a href="install.html" class="button">Go to Install</a>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -107,7 +120,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241022150720"></script>
+	<script src="js/app.min.js?_v=20241024165159"></script>
 </body>
 
 </html>
